--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
 packages = [{ include = "nodetool", from = "src" }]
 package-mode = true
-include = ["src/nodetool/package-metadata/nodetool-replicate.json", "src/nodetool/package_metadata/nodetool-replicate.json"]
+include = ["src/nodetool/package_metadata/nodetool-replicate.json"]
 repository = "https://github.com/nodetool-ai/nodetool-replicate"
 [tool.poetry.dependencies]
 python = "^3.10"
