--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,10 @@ repository = "https://github.com/nodetool-ai/nodetool-replicate"
 python = "^3.11"
 nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
 replicate = "*"
+
+[tool.ruff]
+target-version = "py311"
+
+[tool.ruff.lint]
+extend-select = ["E", "F"]
+ignore = ["E402", "E721", "E501", "F401", "F811"]
