Update project configuration to switch from Poetry to Hatchling for build system, and modify dependencies in pyproject.toml for improved version management. Remove poetry.lock file as it is no longer needed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,41 @@
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[project]
 name = "nodetool-replicate"
 version = "0.6.0"
 description = "Replicate support for Nodetool"
 readme = "README.md"
-authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
-packages = [{ include = "nodetool", from = "src" }]
-package-mode = true
-include = ["src/nodetool/package_metadata/nodetool-replicate.json"]
-repository = "https://github.com/nodetool-ai/nodetool-replicate"
-[tool.poetry.dependencies]
-python = "^3.11"
-nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
-replicate = "*"
+authors = [
+    {name = "Matthias Georgi", email = "matti.georgi@gmail.com"}
+]
+requires-python = ">=3.11"
+
+dependencies = [
+    "nodetool-core>=0.6.0,<0.7.0",
+    "replicate",
+]
+
+
+[project.optional-dependencies]
+# For development with local nodetool-core
+dev = [
+    "nodetool-core @ file:///../nodetool-core",
+]
+# For exact version pinning in production
+stable = [
+    "nodetool-core==0.6.0",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/nodetool"]
+artifacts = [
+    "src/nodetool/package_metadata/nodetool-replicate.json",
+]
 
 [tool.ruff]
 target-version = "py311"
