--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,18 @@ build-backend = "hatchling.build"
 
 [project]
 name = "nodetool-replicate"
-version = "0.6.2rc3"
+version = "0.6.2rc4"
 description = "Replicate support for Nodetool"
 readme = "README.md"
 authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
 requires-python = ">=3.11"
 
-dependencies = ["nodetool-core>=0.6.0,<0.7.0", "replicate"]
+dependencies = ["nodetool-core==0.6.2rc4", "replicate"]
 
 
 [project.optional-dependencies]
 # For exact version pinning in production
-stable = ["nodetool-core==0.6.0"]
+stable = ["nodetool-core==0.6.2rc4"]
 
 [tool.hatch.metadata]
 
