Install nodetool-core from git in copilot setup

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -32,7 +32,10 @@ jobs:
           cache: "pip"
 
       - name: Install Python dependencies
+        env:
+          NODETOOL_CORE_REF: v0.6.2-rc.12
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
-          pip install -e .
+          pip install "nodetool-core @ git+https://github.com/nodetool-ai/nodetool-core.git@${NODETOOL_CORE_REF}"
+          pip install -e . --no-deps
