--- a/.github/workflows/opencode-replicate-sync.yml
+++ b/.github/workflows/opencode-replicate-sync.yml
@@ -31,7 +31,8 @@ jobs:
           cache-dependency-glob: "uv.lock"
 
       - name: Install dependencies
-        run: uv sync --all-extras --dev
+        run: |
+          uv sync --all-extras --dev --extra-index-url https://nodetool-ai.github.io/nodetool-registry/simple/
 
       - name: Run OpenCode
         uses: anomalyco/opencode/github@latest
