--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -25,17 +25,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "pip"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
 
       - name: Install Python dependencies
         env:
           NODETOOL_CORE_REF: v0.6.2-rc.22
+          UV_EXTRA_INDEX_URL: https://nodetool-ai.github.io/nodetool-registry/simple/
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-          pip install "nodetool-core @ git+https://github.com/nodetool-ai/nodetool-core.git@${NODETOOL_CORE_REF}"
-          pip install -e . --no-deps
+          uv sync --frozen --no-dev
+          uv pip install "nodetool-core @ git+https://github.com/nodetool-ai/nodetool-core.git@${NODETOOL_CORE_REF}"
+          uv pip install -e . --no-deps
