--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,16 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-          pip install -e .
+        env:
+          UV_EXTRA_INDEX_URL: https://nodetool-ai.github.io/nodetool-registry/simple/
+        run: uv sync --frozen
       - name: Run ruff
-        run: ruff check .
+        run: uv run ruff check .
       - name: Run black
-        run: black --check .
+        run: uv run black --check .
