--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -33,6 +33,6 @@ jobs:
           NODETOOL_CORE_REF: v0.6.2-rc.22
           UV_EXTRA_INDEX_URL: https://nodetool-ai.github.io/nodetool-registry/simple/
         run: |
-          uv sync --frozen --no-dev
+          uv sync --frozen --no-dev --index-strategy unsafe-best-match
           uv pip install "nodetool-core @ git+https://github.com/nodetool-ai/nodetool-core.git@${NODETOOL_CORE_REF}"
           uv pip install -e . --no-deps
