--- a/.github/workflows/opencode-replicate-sync.yml
+++ b/.github/workflows/opencode-replicate-sync.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv sync --all-extras --dev --extra-index-url https://nodetool-ai.github.io/nodetool-registry/simple/
+          uv sync --all-extras --dev --extra-index-url https://nodetool-ai.github.io/nodetool-registry/simple/ --index-strategy unsafe-best-match
 
       - name: Run OpenCode
         uses: anomalyco/opencode/github@latest
